# torrent-search

./: .README.md.swp  .gitignore  LICENSE  README.md  RESEARCH.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_core.py  test_live.py
torrent_search/: __init__.py  bencode.py  cli.py  download.py  engine.py  magnet.py  models.py  output.py
torrent_search/sources/: __init__.py  base.py  internet_archive.py  linux_distros.py
